Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.2
-
-
492c629e2a (qt/qtlocation/dev) 492c629e2a (qt/tqtc-qtlocation/dev) 63d055e875 (qt/tqtc-qtlocation/5.15) 63d055e875 (qt/tqtc-qtlocation/5.15.11)
Description
PlaceSearchModel using the "esri" plugin fails due to what seems to be an HTTP request instead of HTTPS
Attachments
Issue Links
- relates to
-
QTBUG-92594 ESRI Location Plugin geocoding requests via GeocodeModel not working
- Reported
-
QTBUG-115480 Mapbox plugin no longer works
- Closed
For Gerrit Dashboard: QTBUG-92111 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
340617,1 | Update use of HTTP to HTTPS in esri plugin | dev | qt/qt5 | Status: ABANDONED | 0 | 0 |
340620,16 | Update use of HTTP to HTTPS in esri plugin | dev | qt/qtlocation | Status: MERGED | +2 | 0 |
411951,1 | Update use of HTTP to HTTPS in esri plugin | tqtc/lts-5.15 | qt/tqtc-qtlocation | Status: ABANDONED | +1 | 0 |
416919,2 | Update use of HTTP to HTTPS in esri plugin | tqtc/lts-5.15 | qt/tqtc-qtlocation | Status: MERGED | +2 | 0 |