Update use of HTTP to HTTPS in esri plugin

When accessed via HTTP, the arcgis.com endpoints return:

{"error":{"code":400,"message":"HTTP not supported","details":[]}}

With this change the esri plugin now accesses them via HTTPS.

[ChangeLog][plugins][esri]

Fixes: QTBUG-92111
Change-Id: I7be0295f8c65853ab214bc11d7e6008f3137403a
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: Guillaume Belz <gbelz@esri.com>
(cherry picked from commit 492c629e2a24151f7e66033b43caf6a46bef3880)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>